[package]
name = "sspanel_manager"
version = "0.1.5"
authors = ["spxg <itsme@spxg.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["cookies"] }
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4.10"
regex = "1.3.3"
serde_json = "1.0.45"
serde = "1.0.104"
lazy_static = "1.4.0"

[profile.release]
lto = true
